--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
    limitations under the License.
 -->
 <resources>
-  <string name="app_name">Raw Depth Codelab</string>
+  <string name="app_name" translatable="false">Arwalls</string>
 </resources>
