redraw map by pressing button

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Arwalls</string>
+    <string name="redraw_map">Перерисовать карту</string>
 </resources>
