--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 -->
 <resources>
   <string name="app_name" translatable="false">Arwalls</string>
+    <string name="redraw_map">Redraw map</string>
 </resources>
