--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,11 @@
 <resources>
   <string name="app_name" translatable="false">Arwalls</string>
     <string name="redraw_map">Redraw map</string>
-  <string name="centralize">Centralize</string>
+    <string name="centralize">Centralize</string>
+    <string name="save">OK</string>
+    <string name="accuracy">Accuracy</string>
+    <string name="marker_visibility">Marker visibility</string>
+    <string name="vertical_radius">Vertical radius</string>
+    <string name="height_offset">Overview height</string>
+    <string name="max_render_points">Max render points</string>
 </resources>
