--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
   <string name="install_arcore">Please install ARCore</string>
   <string name="depth_support_error">This device does not support the ARCore Raw Depth API. See https://developers.google.com/ar/devices for a list of devices that do.</string>
   <string name="dismiss">Dismiss</string>
+  <string name="database_error">Images database not available. Try restarting the app.</string>
 </resources>
