--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
    limitations under the License.
 -->
 <resources>
-  <string name="app_name" translatable="false">Arwalls</string>
+  <string name="app_name" translatable="false">Arwalls bread</string>
   <string name="redraw_map">Redraw map</string>
   <string name="centralize">Centralize</string>
   <string name="save">OK</string>
