--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Arwalls</string>
     <string name="redraw_map">Перерисовать карту</string>
     <string name="centralize">Центрировать координаты</string>
     <string name="save">OK</string>
@@ -19,4 +18,7 @@
     <string name="dismiss">Закрыть</string>
     <string name="install_arcore">Установите ARCore</string>
     <string name="camera_error">Камера недоступна. Перезапустите приложение.</string>
+    <string name="hold_above">Держите выше</string>
+    <string name="hold_below">Держите ниже</string>
+    <string name="no_tracking">Отслеживание приостановлено</string>
 </resources>
