--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
   <string name="dismiss">Dismiss</string>
   <string name="database_error">Images database not available. Try restarting the app.</string>
   <string name="map_scale">Map scale</string>
+  <string name="scanned">Scanned: </string>
+  <string name="settings">Settings</string>
+  <string name="beacon_title">Beacon-</string>
 </resources>
