--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="redraw_map">Перерисовать карту</string>
     <string name="centralize">Центрировать координаты</string>
+    <string name="save_map">Сохранить карту</string>
     <string name="save">OK</string>
     <string name="accuracy">Точность</string>
     <string name="marker_visibility">Показать маркер</string>
