--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
   <string name="app_name" translatable="false">Arwalls bread</string>
   <string name="redraw_map">Redraw map</string>
   <string name="centralize">Centralize</string>
+  <string name="save_map">Save map</string>
   <string name="save">OK</string>
   <string name="accuracy">Accuracy</string>
   <string name="marker_visibility">Marker visibility</string>
