--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
   <string name="centralize">Centralize</string>
   <string name="save_map">Save map</string>
   <string name="save">OK</string>
+  <string name="saved">Map saved successfully</string>
   <string name="accuracy">Accuracy</string>
   <string name="marker_visibility">Marker visibility</string>
   <string name="vertical_radius">Vertical radius</string>
