--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="centralize">Центрировать координаты</string>
     <string name="save_map">Сохранить карту</string>
     <string name="save">OK</string>
+    <string name="saved">Карта сохранена в галерею</string>
     <string name="accuracy">Точность</string>
     <string name="marker_visibility">Показать маркер</string>
     <string name="vertical_radius">Длина вертикали обзора</string>
